[package]
name = "pyscrings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyscrings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
pyo3-file = "0.9.0"
scrings = { path = ".." }
