[package]
name = "pyscrings"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyscrings"
crate-type = ["cdylib"]

[dependencies]
pyo3-file = "0.9.0"
scrings = { path = ".." }

[dependencies.pyo3]
version = "0.22"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]